<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dip" >

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userNameTextView"
            android:layout_marginTop="5dip"
            android:ems="10"
            android:hint="@string/userName"
            android:singleLine="true" >
        </EditText>

        <TextView
            android:id="@+id/userPasswordTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userName"
            android:layout_marginTop="5dip"
            android:singleLine="true"
            android:text="@string/userPassword"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userPasswordTextView"
            android:layout_marginTop="5dip"
            android:ems="10"
            android:hint="@string/userPassword"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/userPasswordTextView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userPassword"
            android:layout_marginTop="5dip"
            android:singleLine="true"
            android:text="@string/userPassword2"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/userPassword2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userPasswordTextView2"
            android:layout_marginTop="5dip"
            android:ems="10"
            android:hint="@string/userPassword2"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userPassword2"
            android:layout_marginTop="20dip"
            android:text="@string/buttonRegister" />
    </RelativeLayout>

</ScrollView>