<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <TextView
		    android:id="@+id/noMovie"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:gravity="center"
		    android:text="Our search found that the movie is non-family movie according to its rating. Try another movie."
		    android:textSize="18sp"
		    android:visibility="invisible" />
        	
        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="20dip" >

            <ImageView
                android:id="@+id/movieIcon"
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:gravity="center"
                android:src="@drawable/movie_icon" />

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="movieTitle"
                android:textColor="#0099FF"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content">
		        
	            <RelativeLayout
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight=".40">
		            <TextView
		                android:id="@+id/movieGenre"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="movieGenre" />
		
		            <TextView
		                android:id="@+id/movieRating"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_below="@+id/movieGenre"
		                android:text="movieRating" />
		            <TextView
		                android:id="@+id/movieKeywords"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_below="@+id/movieRating"
		                android:text="movieKeywords" />
			    </RelativeLayout>
			    
	            <RelativeLayout
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight=".60">
			        <TextView
		                android:id="@+id/movieStars"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="movieStars"
		                android:textColor="#372c24" />
		            <TextView
		                android:id="@+id/movieDirector"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="movieDirector"
		                android:layout_below="@+id/movieStars" />
			    </RelativeLayout>
		    </LinearLayout>
		    
            <TextView
                android:id="@+id/movieDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="movieDesc"
                android:textSize="20sp" />

			<LinearLayout
	            android:id="@+id/historyLayout"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >

		        <View
		            android:id="@+id/separator1"
				    android:layout_width="fill_parent"
				    android:layout_height="1dp"
				    android:background="@android:color/darker_gray"
				    android:layout_marginTop="30dip"
				    android:layout_marginBottom="30dip"
				    android:layout_below="@id/movieDesc"/>
		        
		        <TextView
		            android:id="@+id/textViewCinema"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/separator1"
		            android:layout_marginTop="5dip"
		            android:text="@string/textViewCinema" />
		
		        <Spinner
		            android:id="@+id/spinnerCinema"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/textViewCinema"
		            android:layout_marginTop="5dip"
		            android:prompt="@string/textViewCinema" />
		        
		        <TextView
		            android:id="@+id/textViewDate"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/spinnerCinema"
		            android:layout_marginTop="5dip"
		            android:text="@string/textViewDate" />
		
		        <Spinner
		            android:id="@+id/spinnerDate"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/textViewDate"
		            android:layout_marginTop="5dip"
		            android:prompt="@string/textViewDate" />
		        
		        <TextView
		            android:id="@+id/textViewSession"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/spinnerDate"
		            android:layout_marginTop="5dip"
		            android:text="@string/textViewSession" />
		
		        <Spinner
		            android:id="@+id/spinnerSession"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/textViewSession"
		            android:entries="@array/spinnerSessionEntries"
		            android:layout_marginTop="5dip"
		            android:prompt="@string/textViewSession" />
		        
		        <Button
		            android:id="@+id/buttonConfirm"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/spinnerSession"
		            android:layout_marginTop="20dip"
		            android:text="@string/buttonConfirm" />
		        </LinearLayout>
        </LinearLayout>
                
    </RelativeLayout>

</ScrollView>